Cleanup, better init, more detailed html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 <body>
 
-    ref: <input type="text" id="ref" onchange="find(this.value)"/>
-    <input type="button" onclick="loadRef()" value="go"/>
+    <input type="text" id="ref" onchange="find(this.value)"/>
+    <input type="button" onclick="loadRef()" value="go"/><br/>
 
-    <br/>
     <a href="#" onclick="prev()">prev</a>
     <a href="#" onclick="next()">next</a>
-    passage: <div id="pass"></div>
+    
+    <div id="passage"></div>
 
 </body>
 
