Optimized loading function
Also added more info/vars in the passes from xsl to html and stored in
the js.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <input type="text" id="ref" onchange="find(this.value)"/>
-    <input type="button" onclick="loadRef()" value="go"/><br/>
+    <input type="button" onclick="find()" value="go"/><br/>
 
     <a href="#" onclick="prev()">prev</a>
     <a href="#" onclick="next()">next</a>
