Adding jQuery and room for expansion into features
This may be ahead of schedule and need to get removed, but I'm adding
jQuery to start experimenting with main features now.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>bread</title>
+    <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="load.js"></script>
 </head>
 
