js function load structure
Rearranged things, every function now goes in one of three places: main
storage, onload of body, or onload of content.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 
     <div id="nav">
-        <input type="text" id="ref" onchange="find(this.value)"/><br/>
-
+        <input type="text" id="ref" onchange="find(this.value)"/>
         <a href="#prev" onclick="prev()">prev</a>
         <a href="#next" onclick="next()">next</a><br/>
 
