--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
         <a href="#one" class="layout one">one</a>
         <a href="#two" class="layout two">two</a>
-        (<button class="two bible">bible</button>)
+        (
+            <button class="two bible">bible</button>
+            <button class="two notes">notes</button>
+        )
         <br/>
 
         <button class="nums">nums</button>
