--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>bread</title>
     <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="autocomplete.js"></script>
     <script type="text/javascript" src="load.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
