JS split-up, autocomplete progress, var optimization

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 
 <head>
     <title>bread</title>
+
     <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="autocomplete.js"></script>
+    <script type="text/javascript" src="init.js"></script>
     <script type="text/javascript" src="load.js"></script>
+    <script type="text/javascript" src="autocomplete.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
