Specific column-type loading

--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
         <a href="#one" class="layout one">one</a>
         <a href="#two" class="layout two">two</a>
         (
-            <button class="two bible">bible</button>
-            <button class="two notes">notes</button>
+            <select class="current-type one">
+                <option value="bible">bible</option>
+                <option value="notes">notes</option>
+            </select>
+            <select class="current-type two">
+                <option value="notes">notes</option>
+                <option value="bible">bible</option>
+            </select>
         )
         <br/>
 
