Column number scalability
New word-number to integer-number function, adjusted css, (probably
temporarily) added two more columns, complete refactoring of the Layout
Changer function.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#two" class="layout two">two</a><br/>
 
         <select class="current type one">
-            <option value="1">bible</option>
+            <option value="1" selected="selected">bible</option>
             <option value="2">notes</option>
         </select>
         <select class="current type two">
@@ -43,6 +43,8 @@
     <div id="bible">
         <div class="column one"></div>
         <div class="column two"></div>
+        <div class="column three"></div>
+        <div class="column four"></div>
     </div>
 
 </body>
