Bugfix: translation selector
Wasn't functional, now it is! Also ditched some old html and a
commented out js line.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
             <option value="2" selected="selected">notes</option>
         </select><br/>
 
-        <select class="current trans one">
+        <select class="current tran one">
             <option value="kjv">kjv</option>
+            <option value="asv">asv</option>
         </select>
-        <select class="current trans two">
+        <select class="current tran two">
             <option value="kjv">kjv</option>
         </select>
     </div>
@@ -43,8 +44,6 @@
     <div id="bible">
         <div class="column one"></div>
         <div class="column two"></div>
-        <div class="column three"></div>
-        <div class="column four"></div>
     </div>
 
 </body>
