CLEANUP, Objects, Namespacing
Major cleaning, converted all functions to methods inside objects.
Moved things around a little, made some small tweaks.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     <div id="nav">
         <button class="nums">nums</button>
-        <input type="text" id="ref" onchange="find(this.value)"/>
-        <a href="#prev" onclick="prev()">prev</a>
-        <a href="#next" onclick="next()">next</a><br/>
+        <input type="text" id="ref"/>
+        <a class="prev" href="#prev">prev</a>
+        <a class="next" href="#next">next</a><br/>
 
-        <a href="#one" class="layout one">one</a>
-        <a href="#two" class="layout two">two</a><br/>
+        <a class="layout one" href="#one">one</a>
+        <a class="layout two" href="#two">two</a><br/>
 
         <select class="current type one">
             <option value="1" selected="selected">bible</option>
