--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="init.js"></script>
     <script type="text/javascript" src="load.js"></script>
+    <script type="text/javascript" src="view.js"></script>
     <script type="text/javascript" src="autocomplete.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
