--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
     <script type="text/javascript" src="autocomplete.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="design.css"/>
 </head>
 
 <body>
 
     <div id="nav">
+        <div id="title">
+            <h2 class="book">Matthew</h2>
+            <h3 class="chapter">1</h3>
+            <h4 class="translation">KJV</h4>
+        </div>
+
         <button class="nums">nums</button>
         <input type="text" id="ref"/>
-        <a class="prev" href="#prev">prev</a>
-        <a class="next" href="#next">next</a><br/>
+        <a class="prev" href="#prev"><img src="style/chapter-previous.png" alt="two columns"/></a>
+        <a class="next" href="#next"><img src="style/chapter-next.png" alt="two columns"/></a><br/>
 
-        <a class="layout one" href="#one">one</a>
-        <a class="layout two" href="#two">two</a><br/>
+        <a class="layout one" href="#one"><img src="style/column-one.png" alt="two columns"/></a>
+        <a class="layout two" href="#two"><img src="style/column-two.png" alt="two columns"/></a><br/>
 
         <select class="current type one">
             <option value="1" selected="selected">bible</option>
