New nav style, removed un-essential styles from style.css
Moved all non-essential styles to design.css

--- a/index.html
+++ b/index.html
@@ -18,18 +18,17 @@
 
     <div id="nav">
         <div id="title">
-            <h2 class="book">Matthew</h2>
-            <h3 class="chapter">1</h3>
-            <h4 class="translation">KJV</h4>
+            <span class="book">Matthew</span>
+            <span class="chapter">CH<span class="n">21</span></span>
         </div>
 
         <button class="nums">nums</button>
         <input type="text" id="ref"/>
         <a class="prev" href="#prev"><img src="style/chapter-previous.png" alt="two columns"/></a>
-        <a class="next" href="#next"><img src="style/chapter-next.png" alt="two columns"/></a><br/>
+        <a class="next" href="#next"><img src="style/chapter-next.png" alt="two columns"/></a>
 
         <a class="layout one" href="#one"><img src="style/column-one.png" alt="two columns"/></a>
-        <a class="layout two" href="#two"><img src="style/column-two.png" alt="two columns"/></a><br/>
+        <a class="layout two" href="#two"><img src="style/column-two.png" alt="two columns"/></a>
 
         <select class="current type one">
             <option value="1" selected="selected">bible</option>
@@ -38,7 +37,7 @@
         <select class="current type two">
             <option value="1">bible</option>
             <option value="2" selected="selected">notes</option>
-        </select><br/>
+        </select>
 
         <select class="current tran one">
             <option value="kjv">kjv</option>
