Separated input in two: book and chapter
Also renamed autocomplete.js into auto.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="init.js"></script>
     <script type="text/javascript" src="load.js"></script>
     <script type="text/javascript" src="view.js"></script>
-    <script type="text/javascript" src="autocomplete.js"></script>
+    <script type="text/javascript" src="auto.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
@@ -17,7 +17,9 @@
 
     <div id="nav">
         <button class="nums">nums</button>
-        <input type="text" id="ref"/>
+        <input type="text" id="book"/>
+        <input type="text" id="chapter"/>
+
         <a class="prev" href="#prev">prev</a>
         <a class="next" href="#next">next</a><br/>
 
