Arrow key navigation
Added the jQuery Hotkeys plugin (by jeresig himself), and used it to
add the arrow key chapter navigation.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>bread</title>
 
     <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="hotkeys.js"></script>
     <script type="text/javascript" src="init.js"></script>
     <script type="text/javascript" src="load.js"></script>
     <script type="text/javascript" src="view.js"></script>
