Verse reference grabber on hover
Commented this out earlier when it got outdated, putting it back in its
new form.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="nav">
         <div id="title">
             <span class="book">Matthew</span>
-            <span class="chapter">CH<span class="n">21</span></span>
+            <input class="chapter" type="text" value="1"/>
         </div>
 
         <button class="nums">nums</button>
