NEW FILE/FOLDER STRUCTURE
This breaks views, which are soon to be removed.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <title>bread</title>
 
-    <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="jquery.ui.js"></script>
-    <script type="text/javascript" src="hotkeys.js"></script>
-    <script type="text/javascript" src="init.js"></script>
-    <script type="text/javascript" src="load.js"></script>
-    <script type="text/javascript" src="view.js"></script>
-    <script type="text/javascript" src="auto.js"></script>
+    <script type="text/javascript" src="script/jquery.js"></script>
+    <script type="text/javascript" src="script/jquery.ui.js"></script>
+    <script type="text/javascript" src="script/hotkeys.js"></script>
+    <script type="text/javascript" src="script/init.js"></script>
+    <script type="text/javascript" src="script/load.js"></script>
+    <script type="text/javascript" src="script/view.js"></script>
+    <script type="text/javascript" src="script/auto.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="stylesheet" type="text/css" href="design.css"/>
+    <link rel="stylesheet" type="text/css" href="style/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style/design.css"/>
 </head>
 
 <body>
@@ -25,11 +25,11 @@
 
     <div id="nav">
         <button class="nums">nums</button>
-        <a class="prev" href="#prev"><img src="style/chapter-previous.png" alt="two columns"/></a>
-        <a class="next" href="#next"><img src="style/chapter-next.png" alt="two columns"/></a>
+        <a class="prev" href="#prev">prev</a>
+        <a class="next" href="#next">next</a>
 
-        <a class="layout one" href="#one"><img src="style/column-one.png" alt="two columns"/></a>
-        <a class="layout two" href="#two"><img src="style/column-two.png" alt="two columns"/></a>
+        <a class="layout one" href="#one">one</a>
+        <a class="layout two" href="#two">two</a>
 
         <select class="current type one">
             <option value="1" selected="selected">bible</option>
