REMOVED VIEW LOADER
View is still an object that contains views, but it has no functions of
it's own. There is no longer a view-loader.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script type="text/javascript" src="script/hotkeys.js"></script>
     <script type="text/javascript" src="script/init.js"></script>
     <script type="text/javascript" src="script/load.js"></script>
-    <script type="text/javascript" src="script/view.js"></script>
     <script type="text/javascript" src="script/auto.js"></script>
+    <script type="text/javascript" src="script/view.js"></script>
+    <script type="text/javascript" src="script/nums.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style/style.css"/>
     <link rel="stylesheet" type="text/css" href="style/design.css"/>
