BREAKFIX: New file paths for 2nd restructure

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <title>bread</title>
 
-    <script type="text/javascript" src="script/jquery.js"></script>
-    <script type="text/javascript" src="script/jquery.ui.js"></script>
-    <script type="text/javascript" src="script/hotkeys.js"></script>
+    <script type="text/javascript" src="script/library/jquery.js"></script>
+    <script type="text/javascript" src="script/library/jquery.ui.js"></script>
+    <script type="text/javascript" src="script/library/hotkeys.js"></script>
     <script type="text/javascript" src="script/init.js"></script>
     <script type="text/javascript" src="script/load.js"></script>
     <script type="text/javascript" src="script/auto.js"></script>
     <script type="text/javascript" src="script/view.js"></script>
     <script type="text/javascript" src="script/nums.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style/style.css"/>
-    <link rel="stylesheet" type="text/css" href="style/design.css"/>
+    <link rel="stylesheet" type="text/css" href="script/style/style.css"/>
+    <link rel="stylesheet" type="text/css" href="script/style/design.css"/>
 </head>
 
 <body>
