Data object, ajax functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="script/auto.js"></script>
     <script type="text/javascript" src="script/view.js"></script>
     <script type="text/javascript" src="script/nums.js"></script>
+    <script type="text/javascript" src="script/data.js"></script>
 
     <link rel="stylesheet" type="text/css" href="script/style/style.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/design.css"/>
