Book object (book.js), Auto.bookId, Auto.form, template rename
Finally converted the large book array into an object and put it in
it's own library file (script/library/book.js). Auto.bookId is a new
function for grabbing book id from book name. Auto.form is the new name
of Auto.ref, which more clearly states what it does...auto-populate the
form. Renamed notes.html to form.html...as the form is universal and
won't need to change for notes/highlight/tags/etc. right now.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <title>bread</title>
-
     <script type="text/javascript" src="script/library/jquery.js"></script>
     <script type="text/javascript" src="script/library/jquery.ui.js"></script>
     <script type="text/javascript" src="script/library/hotkeys.js"></script>
+    <script type="text/javascript" src="script/library/book.js"></script>
     <script type="text/javascript" src="script/init.js"></script>
     <script type="text/javascript" src="script/load.js"></script>
     <script type="text/javascript" src="script/auto.js"></script>
@@ -22,7 +22,7 @@
 
     <div id="title">
         <span class="book">Matthew</span>
-        <input class="chapter" type="text" value="1"/>
+        <input class="chapter" type="text" value="1" size="1"/>
     </div>
 
     <div id="nav">
