--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <script type="text/javascript" src="script/library/hotkeys.js"></script>
     <script type="text/javascript" src="script/library/book.js"></script>
     <script type="text/javascript" src="script/init.js"></script>
-    <script type="text/javascript" src="script/load.js"></script>
-    <script type="text/javascript" src="script/auto.js"></script>
-    <script type="text/javascript" src="script/view.js"></script>
     <script type="text/javascript" src="script/data.js"></script>
+    <script type="text/javascript" src="script/render.js"></script>
+    <script type="text/javascript" src="script/view.js"></script>
 
     <link rel="stylesheet" type="text/css" href="script/style/style.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/design.css"/>
