CSS: UserContent styling progress

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <select class="current tran two">
             <option value="kjv">kjv</option>
         </select>
+
+        <select name="current privacy">
+            <option value="public">public</option>
+            <option value="private">private</option>
+        </select>
     </div>
 
     <div id="bible">
