CSS3 Media Query Implementation
First experimental implementation of CSS3 Media Queries to optimize
viewing. The goal is to automatically switch between single-column and
multicolumn views when needed.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="script/style/style.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/design.css"/>
+    <link media="screen and (max-width: 1023px)" rel="stylesheet" type="text/css" href="script/style/thin.css"/>
 </head>
 
 <body>
