CSS3 Enhanced for PC, Tablet, and Mobile
Now contains three stylesheets (initiated via media queries), the
default, tablet, and mobile.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <link rel="stylesheet" type="text/css" href="script/style/style.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/design.css"/>
-    <link media="screen and (max-width: 1023px)" rel="stylesheet" type="text/css" href="script/style/thin.css"/>
+    <link media="screen and (max-width: 1024px)" rel="stylesheet" type="text/css" href="script/style/tablet.css"/>
+    <link media="screen and (max-width: 700px)" rel="stylesheet" type="text/css" href="script/style/mobile.css"/>
 </head>
 
 <body>
