--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" type="text/css" href="script/style/style.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/design.css"/>
+    <link rel="stylesheet" type="text/css" href="script/style/usercontent.css"/>
+
     <link media="screen and (max-width: 1024px)" rel="stylesheet" type="text/css" href="script/style/tablet.css"/>
     <link media="screen and (max-width: 700px)" rel="stylesheet" type="text/css" href="script/style/mobile.css"/>
 </head>
