--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="script/library/jquery.ui.js"></script>
     <script type="text/javascript" src="script/library/hotkeys.js"></script>
     <script type="text/javascript" src="script/library/book.js"></script>
+    <script type="text/javascript" src="script/library/stats.js"></script>
     <script type="text/javascript" src="script/init.js"></script>
     <script type="text/javascript" src="script/data.js"></script>
     <script type="text/javascript" src="script/render.js"></script>
