Translation improvements, XML format
Corrected file structure, still fixing translation files and
import.php. Added a text file that states the XML format.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
                 </select>
 
                 <select class="current tran one">
-                    <option value="kjv">kjv</option>
+                    <option value="kjv">King James Version</option>
+                    <option value="nasb">New American Standard Version</option>
+                    <option value="niv">New International Version</option>
+                    <option value="esv">English Standard Version</option>
+                    <option value="msg">The Message</option>
                 </select>
                 <select class="current tran two">
-                    <option value="kjv">kjv</option>
+                    <option value="kjv">King James Version</option>
+                    <option value="nasb">New American Standard Version</option>
+                    <option value="niv">New International Version</option>
+                    <option value="esv">English Standard Version</option>
+                    <option value="msg">The Message</option>
                 </select>
 
                 <select name="current privacy">
@@ -55,6 +63,11 @@
                     <option value="private">private</option>
                 </select>
             </div>
+        </div>
+
+        <div id="title">
+            <h1 class="book"></h1>
+            <input class="chapter" type="text" value="" size="1"/>
         </div>
 
         <div id="bible">
