Auto dropdown width on nav

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" type="text/css" href="script/style/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/bootstrap-responsive.min.css"/>
     
-    <!--<link rel="stylesheet" type="text/css" href="script/style/style.css"/>
-    <link rel="stylesheet" type="text/css" href="script/style/design.css"/>
+    <link rel="stylesheet" type="text/css" href="script/style/style.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="script/style/design.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/usercontent.css"/>
 -->
     
