Updated Angular library, added angular-resource

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>bread</title>
     <script type="text/javascript" src="script/library/angular.js"></script>
+    <script type="text/javascript" src="script/library/angular-resource.js"></script>
     <script type="text/javascript" src="script/library/xml2json.js"></script>
     <script type="text/javascript" src="script/library/book.js"></script>
     <script type="text/javascript" src="script/ng.js"></script>
