--- a/index.html
+++ b/index.html
@@ -8,15 +8,6 @@
     <script type="text/javascript" src="script/library/xml2json.js"></script>
     <script type="text/javascript" src="script/library/book.js"></script>
     <script type="text/javascript" src="script/ng.js"></script>
-    <!--
-    <script type="text/javascript" src="script/library/jquery.js"></script>
-    <script type="text/javascript" src="script/library/hotkeys.js"></script>
-    <script type="text/javascript" src="script/library/stats.js"></script>
-    <script type="text/javascript" src="script/init.js"></script>
-    <script type="text/javascript" src="script/data.js"></script>
-    <script type="text/javascript" src="script/render.js"></script>
-    <script type="text/javascript" src="script/view.js"></script>
-    -->
     
     <link rel="stylesheet" type="text/css" href="script/style/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/bootstrap-responsive.min.css"/>
@@ -57,7 +48,7 @@
             </div>
         </div>
 
-    </div><!-- end container -->
+    </div>
 </body>
 
 </html>
