--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="bread">
 
 <head>
     <title>bread</title>
@@ -44,7 +44,37 @@
                     </div>
                 </div>
 
-                <div class="column two span6"></div>
+                <div class="column two span6">
+                    <form>
+                        <fieldset>
+                            <legend>Legend</legend>
+                            <label>Label</label>
+                            <input type="text" placeholder="Tag"/><br/>
+                            <textarea placeholder="Note"></textarea><br/>
+                            <select>
+                                <option>Privacy</option><!-- get options from db-->
+                                <option value="private">Private</option>
+                                <option value="public">Public</option>
+                            </select><br/>
+                            <button type="submit" class="btn">Save</button>
+                        </fieldset>
+                    </form>
+                    
+                    <div class="passage well" data-ng-repeat="per reference" data-id="db passage id">
+                        <span class="reference">Reference: </span>
+                        <div class="note">Notes: <span data-ng-repeat="per note"></span></div>
+                        Tags:
+                        <div class="pagination">
+                            <ul class="tags" data-ng-repeat="per tag">
+                                <li class="tag"><a href="#"></a></li>
+                            </ul>
+                        </div>
+                        <div class="actions">
+                            <a class="btn btn-danger btn-small delete">Delete</a>
+                            <a class="btn btn-success btn-small">Save</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
