Bringing back the $resource model for user content

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
                 </div>
 
                 <div class="column two span6">
+                    {{ccc}}
                     <form>
                         <fieldset>
-                            <legend>Legend</legend>
-                            <label>Label</label>
+                            <legend>Study</legend>
+                            <label>Reference</label>
                             <input type="text" placeholder="Tag"/><br/>
                             <textarea placeholder="Note"></textarea><br/>
                             <select>
