--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 
 <head>
     <title>bread</title>
-    <script type="text/javascript" src="script/library/angular.js"></script>
-    <script type="text/javascript" src="script/library/angular-resource.js"></script>
-    <script type="text/javascript" src="script/library/xml2json.js"></script>
-    <script type="text/javascript" src="script/library/book.js"></script>
-    <script type="text/javascript" src="script/ng.js"></script>
     <link rel="stylesheet" type="text/css" href="script/style/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/bootstrap-responsive.min.css"/>
     <link rel="stylesheet" type="text/css" href="script/style/style.css"/>
@@ -83,6 +78,12 @@
         </div>
 
     </div>
+
+    <script type="text/javascript" src="script/library/angular.min.js"></script>
+    <script type="text/javascript" src="script/library/angular-resource.min.js"></script>
+    <script type="text/javascript" src="script/library/xml2json.js"></script>
+    <script type="text/javascript" src="script/library/book.js"></script>
+    <script type="text/javascript" src="script/ng.js"></script>
 </body>
 
 </html>
